--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,8 +22,36 @@
     right: 0;
     left: 0;
 }
+.sub-router-card{
+  position: fixed;
+  margin-top: -1px;
+  left: 45px;
+  z-index: 20;
+  padding:  0;
+  border-radius: 0 0 0 0 ;
+  display: flex ;
+  flex-direction: column;
+  top: 240px;
+  transform: scaleX(0);
+  :last-child{
+    border-bottom: none;
+  }
+  transition: all 1s ease-in-out;
+  transform-origin: left;
 
-
+}
+.sub-router{
+    display: flex;
+    flex-direction: row;
+    padding: 0px 24px;
+    min-height: 45px;
+    align-items: center;
+    justify-content: center;    
+    min-width: 200px;
+    text-decoration: none;
+    justify-content: space-between;
+    transition: all 1s ease-in-out;
+}
 .lds-roller {
     display: inline-block;
     position: relative;
@@ -128,6 +156,11 @@ a.nav-item {
     transition: all 1s ease-in-out;
     span{
         transform: scale(1.3);
+    }
+    &:hover{
+      .sub-router-card{
+        transform: scaleX(1) ;
+      }
     }
    
 }
