--- a/src/app/pages/login/login1/login1.component.html
+++ b/src/app/pages/login/login1/login1.component.html
@@ -23,8 +23,8 @@
                     
                 </div>
                 
-                <div class="text-right p-t-8 p-b-31">
-                    <a href="#">
+                <div class="text-right txt1 p-t-8 p-b-31">
+                    <a href="#" class="txt1" style="text-decoration: none;">
                         Forgot password?
                     </a>
                 </div>
