--- a/src/theme.scss
+++ b/src/theme.scss
@@ -14,6 +14,33 @@
     .txt-color{
         color: #333;
     }
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover, 
+    input:-webkit-autofill:focus,
+    textarea:-webkit-autofill,
+    textarea:-webkit-autofill:hover,
+    textarea:-webkit-autofill:focus,
+    select:-webkit-autofill,
+    select:-webkit-autofill:hover,
+    select:-webkit-autofill:focus {
+      -webkit-box-shadow: 0 0 0px 30px white  inset !important;
+    }
+    
+    .sub-router{
+      border-bottom: 1px solid #333;
+      :hover{
+        color: #fff;
+        background-color: mat-color($alternate-primary);
+      }
+      :last-child{
+        border-bottom: none;
+      }
+    }
+    .sub-router.active{
+      color: #fff;
+      background-color: mat-color($alternate-primary);
+
+    }
     .border-bottom-nav-a{
         border-bottom: 1px solid #333;
         border-color: #333;
@@ -21,6 +48,7 @@
             border-inline-start-style: solid;
             border-inline-start-width: 5px;
             color: #fff;
+            border-inline-start-color: #fff;
             // border-color: #fff;
             background-color: mat-color($alternate-primary);
         }
@@ -30,6 +58,7 @@
         border-inline-start-width: 5px;
         color: #fff;
         // border-color: #fff;
+        border-inline-start-color: #fff;
         background-color: mat-color($alternate-primary);
     }
     input{
@@ -82,13 +111,42 @@
     .txt-color{
         color: #fff;
     }
+    input,
+    textarea,
+    select{
+      color: #fff;
+    }
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover, 
+    input:-webkit-autofill:focus,
+    textarea:-webkit-autofill,
+    textarea:-webkit-autofill:hover,
+    textarea:-webkit-autofill:focus,
+    select:-webkit-autofill,
+    select:-webkit-autofill:hover,
+    select:-webkit-autofill:focus {
+      -webkit-box-shadow: 0 0 0px 30px #424242  inset !important; 
+    }
+    .sub-router{
+      border-bottom: 1px solid #fff;
+      
+      &:hover{
+        color: #fff;
+        background-color: mat-color($primary-dark);
+      }
+    }
+    .sub-router.active{
+      color: #fff;
+      background-color: mat-color($primary-dark);
+
+    }
     .border-bottom-nav-a{
         border-bottom: 1px solid #fff;
         border-color: #fff;
         &:hover{
             border-inline-start-style: solid;
             border-inline-start-width: 5px;
-            color: #333;
+            color: #fff;
             // border-color: #333;
             background-color: mat-color($primary-dark);
         }
