--- a/src/app/pages/charts/dynamicComponents/column/column.component.html
+++ b/src/app/pages/charts/dynamicComponents/column/column.component.html
@@ -1,1 +1,1 @@
-<div class="chart  mat-elevation-z3" id="container{{data.id}}"></div>
+<div class="chart  mat-elevation-z3" id="container_{{data.id}}"></div>
