--- a/src/app/pages/charts/dynamicComponents/log-table/log-table.component.html
+++ b/src/app/pages/charts/dynamicComponents/log-table/log-table.component.html
@@ -65,7 +65,7 @@
           </ng-container>
 
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-          <mat-row *matRowDef="let row; columns: displayedColumns;">
+          <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="highlight(row)">
           </mat-row>
         </mat-table>
       <!-- <div class="no-results" [style.display]="dataSource.data.length == 0 ? '' : 'none'">
