--- a/src/app/pages/charts/main/main.component.html
+++ b/src/app/pages/charts/main/main.component.html
@@ -1,11 +1,13 @@
-<div class="board">
-    <div class="item" style="min-width: calc(100% - 16px) !important;">
+
+  <div class="board">
+    <div class="item">
         <app-tbl></app-tbl>
     </div>
     <div class="item">
         <app-column [data]="{id:'stock1'}"></app-column>
     </div>
     <div class="item">
+        <app-gauge [data]="{id:'gauge1'}"></app-gauge>
+        <app-gauge2 [data]="{id:'gauge2'}"></app-gauge2>
     </div>
 </div>
- 
