--- a/src/app/pages/charts/main/main.component.scss
+++ b/src/app/pages/charts/main/main.component.scss
@@ -6,15 +6,10 @@
     flex-wrap: wrap;
     width:  100%;
     height: 100%;
-    @include xs{
-        flex-direction: column;
-    }
-    @include sm{
-        flex-direction: column;
-    }
     div.item{
         padding: 8px;
         min-width: calc(50% - 16px);
+        max-width: calc(50% - 16px);
         min-height: calc(calc(100vh / 1.5) - 71px);
         .item-body{
             width: 100%;
@@ -23,10 +18,10 @@
         }
          
         @include xs{
-            min-width: calc(100% - 20px);
+            min-width: calc(100% - 16px);
         }
         @include sm{        
-            min-width: calc(100% - 20px);
+            min-width: calc(100% - 16px);
         }
     }
 }
