--- a/src/app/pages/dynamic/dynamic-comp/dynamic-comp.component.html
+++ b/src/app/pages/dynamic/dynamic-comp/dynamic-comp.component.html
@@ -15,6 +15,7 @@
     <div class="none-close" *ngIf="inData.type==='none'">
         <span>{{inData.comName}}</span>
     </div>
-    <span *ngIf="inData.type==='none'">No destory component<</span>
+    <span *ngIf="inData.type==='none'">No destory component</span>
+    <div style="margin-top: auto;">{{inData.id}} &nbsp; {{inData.timer}}</div>
     </div>
 </div>
