--- a/src/app/pages/login/login1/login1.component.scss
+++ b/src/app/pages/login/login1/login1.component.scss
@@ -169,7 +169,7 @@
     background-position: center;
     background-size: cover;
   }
-  
+  //====
   .wrap-login100 {
     width: 380px;
     border-radius: 10px;
@@ -305,7 +305,7 @@
     flex-wrap: wrap;
     justify-content: center;
   }
-  
+  //=====
   .wrap-login100-form-btn {
     width: 100%;
     display: block;
@@ -373,6 +373,7 @@
       color: none;
     }
   }
+  //======
   .wrap-login100-form-btn:hover .login100-form-bgbtn {
     left: 0;
   }
