--- a/src/app/pages/charts/main/main.component.scss
+++ b/src/app/pages/charts/main/main.component.scss
@@ -8,13 +8,12 @@
     height: 100%;
     div.item{
         padding: 8px;
-        min-width: calc(50% - 16px);
+        width: calc(50% - 16px);
         max-width: calc(50% - 16px);
         min-height: calc(calc(100vh / 1.5) - 71px);
         .item-body{
             width: 100%;
             height: 100%;
-            min-height: 500px;
         }
          
         @include xs{
@@ -22,6 +21,10 @@
         }
         @include sm{        
             min-width: calc(100% - 16px);
+        }
+        @media (max-width:400px) {
+            min-width: 400px;
+            
         }
     }
 }
